MDEV-18992 Crash when using 'insert into on duplicate update'if session charset different from table charset